# skills_demo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  pyproject.toml
app/: claude_engine.py  engine.py  executor.py  main.py  models.py  parser.py  registry.py  semantic_matcher.py  simulator.py  skill_parser.py  skills_engine.py  tool_router.py  tools.py
app/capture/: __init__.py  generator.py  recorder.py  refiner.py  repository.py  vector_store.py
app/governance/: __init__.py  alerts.py  audit.py  metrics.py  safety.py
app/layers/: __init__.py  master_agent.py  skill_executor.py  sub_agents.py  workflow_engine.py
app/mcp/: __init__.py  client.py  servers.py  tools.py
app/providers/: __init__.py  base.py  claude_provider.py  factory.py  gemini_provider.py  ollama_provider.py  openai_provider.py
app/storage/: __init__.py  database.py  models.py  repository.py
docs/: AGENTIC_OPERATIONS_DESIGN.md  TECHNICAL.md
scripts/: build-package.sh
skills/: code-runner.SKILL.md  file-reader.SKILL.md  git-helper.SKILL.md  project-analyzer.SKILL.md
static/: app.js  style.css
templates/: index.html
tests/: test_api.py  test_full.py
workspace/: agent_skills_enterprise.pptx  create-assets.js  generate-pptx.js  package-lock.json  package.json
workspace/slides/: slide01-cover.html  slide02-challenges.html  slide03-vision.html  slide04-architecture.html  slide05-agent-layer.html  slide06-skills-layer.html  slide07-layer-interaction.html  slide08-case-intro.html  slide09-human-process.html  slide10-arch-mapping.html  slide11-workflow.html  (+6 more)
(+4 files in other folders)
